feat: test gerFirst 사